<resources>
    <string name="app_name">MyPokedex</string>
    <string name="open">Open</string>
    <string name="close">Close</string>

    <!--Stats -->
    <string name="hp">HP: %d</string>
    <string name="attack">Attack: %d</string>
    <string name="defense">Defense: %d</string>
    <string name="speed">Speed: %d</string>
    <string name="sa">SA: %d</string>
    <string name="sd">SD: %d</string>
    <string name="number"># %d</string>
    <!--Region -->
    <string name="kanto">Kanto</string>
    <string name="johto">Johto</string>
    <string name="hoenn">Hoenn</string>
    <string name="sinnoh">Sinnoh</string>
    <string name="unova">Unova</string>
    <string name="kalos">Kalos</string>
    <string name="alola">Alola</string>
    <string name="galar">Galar</string>
    <string name="no_region_selected">No Region Selected</string>
    <string name="sort_by_type">Sort by Type</string>
    <string name="sort_by_name">Sort by Name</string>
    <string name="search">search</string>
    <string name="double_damage_from">Double Damage From: </string>
    <string name="double_damage_to">Double Damage To: </string>
    <string name="half_damage_from">Half Damage From:</string>
    <string name="half_damage_to">Half Damage to:</string>
    <string name="no_damage_from">No Damage From:</string>
    <string name="no_damage_to">No Damage To:</string>

</resources>