<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".PokemonDetail.DetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="@color/light_red">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/detail_pokemon_image"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:src="@drawable/ic_baseline_catching_pokemon_24"
                    android:adjustViewBounds="true"/>

                <ProgressBar
                    android:id="@+id/detail_progress_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:visibility="gone"/>

            </FrameLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/detail_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"/>


        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!--TODO Find a way to use include for stats -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/pokemon_hp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/hp"
                android:background="@color/hp"
                style="@style/startText"/>

            <TextView
                android:id="@+id/pokemom_speed"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/speed"
                android:background="@color/speed"
                style="@style/startText"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/pokemon_attack"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/attack"
                android:background="@color/attack"
                style="@style/startText"/>

            <TextView
                android:id="@+id/pokemon_defense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/defense"
                android:background="@color/defense"
                style="@style/startText"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/pokemon_sa"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sa"
                android:background="@color/special_attack"
                style="@style/startText"/>

            <TextView
                android:id="@+id/pokemon_sd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sd"
                android:background="@color/special_defense"
                style="@style/startText"/>


        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/startText"
            android:text="@string/double_damage_from" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/weak1"
                android:layout_width="32dp"
                android:layout_height="29dp"
                tools:src="@drawable/electric" />

            <ImageView
                android:id="@+id/weak2"
                android:layout_width="32dp"
                android:layout_height="29dp"
                tools:src="@drawable/electric" />

            <ImageView
                android:id="@+id/weak3"
                android:layout_width="32dp"
                android:layout_height="29dp"
                tools:src="@drawable/electric" />

            <ImageView
                android:id="@+id/weak4"
                android:layout_width="32dp"
                android:layout_height="29dp"
                tools:src="@drawable/electric" />

            <ImageView
                android:id="@+id/weak5"
                android:layout_width="32dp"
                android:layout_height="29dp"
                tools:src="@drawable/electric" />

            <ImageView
                android:id="@+id/weak6"
                android:layout_width="32dp"
                android:layout_height="29dp"
                tools:src="@drawable/electric" />

            <ImageView
                android:id="@+id/weak7"
                android:layout_width="32dp"
                android:layout_height="29dp"
                tools:src="@drawable/electric" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/startText"
            android:text="@string/double_damage_to" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/strong1"
                android:layout_width="32dp"
                android:layout_height="29dp"
                tools:src="@drawable/electric" />

            <ImageView
                android:id="@+id/strong2"
                android:layout_width="32dp"
                android:layout_height="29dp"
                tools:src="@drawable/electric" />

            <ImageView
                android:id="@+id/strong3"
                android:layout_width="32dp"
                android:layout_height="29dp"
                tools:src="@drawable/electric" />

            <ImageView
                android:id="@+id/strong4"
                android:layout_width="32dp"
                android:layout_height="29dp"
                tools:src="@drawable/electric" />

            <ImageView
                android:id="@+id/strong5"
                android:layout_width="32dp"
                android:layout_height="29dp"
                tools:src="@drawable/electric" />

            <ImageView
                android:id="@+id/strong6"
                android:layout_width="32dp"
                android:layout_height="29dp"
                tools:src="@drawable/electric" />

            <ImageView
                android:id="@+id/strong7"
                android:layout_width="32dp"
                android:layout_height="29dp"
                tools:src="@drawable/electric" />

        </LinearLayout>


        <!-- <include
             layout="@layout/type_effectiveness"/> -->

    </LinearLayout>
    </androidx.core.widget.NestedScrollView>
        <com.google.android.material.floatingactionbutton.FloatingActionButton

            android:id="@+id/floating_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_play_arrow_24"
            android:layout_margin="16dp"
            android:layout_gravity="bottom|end">

        </com.google.android.material.floatingactionbutton.FloatingActionButton>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>